Fix spacing of score elements on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -52,10 +52,20 @@ section.game-content {
 }
 
 div.round-info {
+	width: 80%;
 	display: flex;
 	@media screen and (max-width: 768px) {
 		flex-direction: column;
 		align-items: center;
+	}
+}
+
+div.score-display-line {
+	display: flex;
+	justify-content: space-between;
+	/* this prevents displacing of Round count when on desktop */
+	@media screen and (max-width: 768px) {
+		width: 100%;
 	}
 }
 
